# sefirot

./: .gitignore  CLAUDE.md  NOTICE  README.md  milestone-1.md  milestones.20260310_044046.json  milestones.json  pyproject.toml  skills-lock.json
.claude/skills/: gen-milestones
.sefirot/sessions/: 20260310_0416_toyディレクトリ構造セットアップ.md  20260310_0420_binary_search実装.md  20260310_0420_caesar暗号実装.md  20260310_0420_factorial実装.md  20260310_0420_fibonacci実装.md  20260310_0420_fizzbuzz実装.md  20260310_0420_palindrome実装.md  20260310_0420_prime実装.md  20260310_0420_reverse実装.md  20260310_0443_prime_factorization実装.md
docs/: architecture.md  claude-code-stdout-issue.md  guide.md
docs/tasks/: 20260310_0411_toyプログラム作成.md  20260310_0415_milestone-1.md  20260310_0418_milestone-2.md  20260310_0437_toy新機能追加.md  20260310_0442_milestone-1.md
skills/gen-milestones/: SKILL.md
skills/loop/: SKILL.md
skills/plan/: SKILL.md
skills/sefirot-loop/: SKILL.md
skills/sefirot-milestone/: SKILL.md
skills/sefirot-plan/: SKILL.md
src/sefirot/: __init__.py  cli.py  daemon.py  installer.py  loop.py  server.py  spawner.py  state.py  worktree.py
src/sefirot/templates/: skill.md  (+2 more)
src/toy/: __init__.py  binary_search.py  caesar.py  factorial.py  fibonacci.py  fizzbuzz.py  length.py  palindrome.py  prime.py  reverse.py  temperature.py  types.py
tests/: test_installer.py  test_loop.py  test_state.py
tests/toy/: test_binary_search.py  test_caesar.py  test_factorial.py  test_fibonacci.py  test_fizzbuzz.py  test_length.py  test_palindrome.py  test_prime.py  test_reverse.py  test_temperature.py
(+20 files in other folders)
