[project]
name = "sefirot"
version = "0.3.0"
description = "Claude Code multi-agent orchestration framework"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sefirot = "sefirot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sefirot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
